// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateLockFiles() defaults to latest 1`] = `
Array [
  Object {
    "cmd": "npm install --package-lock-only --no-audit && npx lerna@latest bootstrap --no-ci -- --package-lock-only --no-audit",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
]
`;

exports[`generateLockFiles() generates package-lock.json files 1`] = `
Array [
  Object {
    "cmd": "npm install --package-lock-only --no-audit && npx lerna@2.0.0 bootstrap --no-ci -- --package-lock-only --no-audit",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
]
`;

exports[`generateLockFiles() generates yarn.lock files 1`] = `
Array [
  Object {
    "cmd": "yarn install --ignore-scripts --ignore-engines --ignore-platform --mutex network:31879 && npx lerna@2.0.0 bootstrap --no-ci -- --ignore-scripts --ignore-engines --ignore-platform --mutex network:31879",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
]
`;

exports[`generateLockFiles() performs full npm install 1`] = `
Array [
  Object {
    "cmd": "npm install --ignore-scripts  --no-audit && npx lerna@2.0.0 bootstrap --no-ci -- --ignore-scripts  --no-audit",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
]
`;

exports[`generateLockFiles() uses docker 1`] = `
Array [
  Object {
    "cmd": "docker run --rm -v \\"some-dir\\":\\"some-dir\\" -v \\"some-cache-dir\\":\\"some-cache-dir\\" -e NPM_CONFIG_CACHE -e npm_config_store -w \\"some-dir\\" renovate/npm npm install --ignore-scripts  --no-audit && npx lerna@2.0.0 bootstrap --no-ci -- --ignore-scripts  --no-audit",
    "options": Object {
      "cwd": "some-dir",
      "encoding": "utf-8",
      "env": Object {
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "timeout": 900000,
    },
  },
]
`;
